[package]
name = "ocw-node"
version = "3.0.0"
edition = "2018"
authors = ['Substrate']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'An instant-sealing Substrate node. Can be used with most recipe runtimes.'
license = "GPL-3.0-or-later"

[[bin]]
name = "ocw-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.3.1"
structopt = "0.3.8"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.2.0"
parking_lot = "0.9.0"
trie-root = "0.15.2"

# Substrate packages
sc-basic-authorship = '0.9'
sc-cli = '0.9'
sc-client-api = '3.0'
sc-consensus = '0.9'
sc-consensus-manual-seal = '0.9'
sc-executor = '0.9'
sc-network = '0.9'
sc-service = '0.9'
sc-transaction-pool = '3.0'
sp-api = '3.0'
sp-consensus = '0.9'
sp-core = '3.0'
sp-inherents = '3.0'
sp-io = '3.0'
sp-keystore = '0.9'
sp-runtime = '3.0'
sp-timestamp = '3.0'
sp-transaction-pool = '3.0'

# local packages
# `cargo build --release --features ocw`.
runtime = { package = "ocw-runtime", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = '3.0'
vergen = "3.0.4"

[features]
ocw = []
